--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "pm": "npm",
   "publish": true,
   "main": "./lib/config.js",
-  "devDependencies": {
-    "fs-extra": "~0.6.0"
+  "dependencies": {
+    "jsonld": "~0.1.25",
+    "fs-extra": "~0.6.0",
+    "waitfor": "~0.1.3"
   },
   "scripts": {
     "test": "make test"
+  },
+  "devDependencies": {
+    "mocha": "~1.9.0"
   }
 }
