--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "uid": "github.com/pinf/pinf-config-js",
-  "name": "pinf-config-js",
-  "version": "0.1.1",
+  "name": "pinf-config",
+  "version": "0.1.2",
   "pm": "npm",
   "publish": true,
   "main": "./lib/config.js",
